--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,5 +6,6 @@
       <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
+    <button wx:if="{{hasUserInfo}}"  bindtap="getStockInfo"> 获取个股数据 </button>
   </view>
 </view>
